--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -1,8 +1,12 @@
   <!-- Next Steps -->
   <h2>User List App</h2>
   <mat-selection-list #users>
-    <mat-list-option *ngFor="let user of usersList">
-      {{user.name}}
+    <mat-list-option *ngFor="let user of usersList; let i = index" [ngClass]="{'gray' : i%2}">
+      <div >
+        <span class="item">{{user.name}}</span>
+        <span class="item">{{user.username}}</span>
+        <span *ngIf="user.role === 'Admin'">{{user.role}}</span>
+      </div>
     </mat-list-option>
   </mat-selection-list>
   <p>
