--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -1,5 +1,21 @@
-  <!-- Next Steps -->
-  <h2>User List App</h2>
+<h2>User List App</h2>
+
+  <div class="line">
+    <mat-form-field appearance="outline">
+      <mat-label>Сортировка</mat-label>
+      <mat-select #sort_type (selectionChange)="sort(sort_type.value)">
+        <mat-option value="0">А-Я</mat-option>
+        <mat-option value="1">Я-А</mat-option>
+      </mat-select>
+    </mat-form-field>
+    <mat-form-field appearance="outline">
+      <mat-label>Поиск</mat-label>
+      <input matInput type="text" placeholder="Найти польз" #query (keyup.enter)="search(query.value)">
+      <mat-icon matSuffix (click)="search(query.value)">search</mat-icon>
+    </mat-form-field>
+  </div>
+
+
   <mat-selection-list #users>
     <mat-list-option *ngFor="let user of usersList; let i = index" [ngClass]="{'gray' : i%2}">
       <div >
