--- a/src/app/users-list/users-list.component.css
+++ b/src/app/users-list/users-list.component.css
@@ -12,4 +12,10 @@
   justify-content: space-between;
   align-items: flex-start;
   margin-top: 20px;
+  .item {
+    width: 150px;
+  }
+  .btn{
+    height: 50px;
+  }
 }
